<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="?attr/cardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <ImageView
            android:id="@+id/addressSpoiler"
            tools:ignore="ContentDescription"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintBottom_toBottomOf="@id/addressTitleTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/addressTitleTextView"
            app:tint="@color/purple_200" />

        <TextView
            android:id="@+id/addressTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/addressSpoiler"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/addressGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="streetEditTextLayout, suiteEditTextLayout, cityEditTextLayout, zipcodeEditTextLayout, geoEditTextLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/streetEditTextLayout"
            style="?attr/textInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/street"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addressTitleTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/streetEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/suiteEditTextLayout"
            style="?attr/textInputStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/suite"
            app:layout_constraintEnd_toEndOf="@id/streetEditTextLayout"
            app:layout_constraintStart_toStartOf="@id/streetEditTextLayout"
            app:layout_constraintTop_toBottomOf="@id/streetEditTextLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/suiteEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cityEditTextLayout"
            style="?attr/textInputStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            app:layout_constraintEnd_toEndOf="@id/streetEditTextLayout"
            app:layout_constraintStart_toStartOf="@id/streetEditTextLayout"
            app:layout_constraintTop_toBottomOf="@id/suiteEditTextLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cityEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/zipcodeEditTextLayout"
            style="?attr/textInputStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/zip_code"
            app:layout_constraintEnd_toEndOf="@id/streetEditTextLayout"
            app:layout_constraintStart_toStartOf="@id/streetEditTextLayout"
            app:layout_constraintTop_toBottomOf="@id/cityEditTextLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/zipcodeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/geoEditTextLayout"
            style="?attr/textInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/geo"
            app:layout_constraintEnd_toEndOf="@id/streetEditTextLayout"
            app:layout_constraintStart_toStartOf="@id/streetEditTextLayout"
            app:layout_constraintTop_toBottomOf="@id/zipcodeEditTextLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/geoEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>