<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="?attr/cardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <ImageView
            android:id="@+id/contactsSpoiler"
            tools:ignore="ContentDescription"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintBottom_toBottomOf="@id/contactsTitleTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/contactsTitleTextView"
            app:tint="@color/purple_200" />

        <TextView
            android:id="@+id/contactsTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/contacts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/contactsSpoiler"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/contactsGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="emailEditTextLayout, phoneEditTextLayout, websiteEditTextLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailEditTextLayout"
            style="?attr/textInputStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contactsTitleTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneEditTextLayout"
            style="?attr/textInputStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            app:layout_constraintEnd_toEndOf="@id/emailEditTextLayout"
            app:layout_constraintStart_toStartOf="@id/emailEditTextLayout"
            app:layout_constraintTop_toBottomOf="@id/emailEditTextLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/websiteEditTextLayout"
            style="?attr/textInputStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/website"
            app:layout_constraintEnd_toEndOf="@id/emailEditTextLayout"
            app:layout_constraintStart_toStartOf="@id/emailEditTextLayout"
            app:layout_constraintTop_toBottomOf="@id/phoneEditTextLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/websiteEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>