<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="?attr/cardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <ImageView
            android:id="@+id/companySpoiler"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintBottom_toBottomOf="@id/companyTitleTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/companyTitleTextView"
            app:tint="@color/purple_200"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/companyTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/company"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/companySpoiler"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/companyGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="companyNameEditTextLayout, companyCatchPhraseEditTextLayout, companyBsEditTextLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/companyNameEditTextLayout"
            style="?attr/textInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/companyTitleTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/companyNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/companyCatchPhraseEditTextLayout"
            style="?attr/textInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/catch_phrase"
            app:layout_constraintEnd_toEndOf="@id/companyNameEditTextLayout"
            app:layout_constraintStart_toStartOf="@id/companyNameEditTextLayout"
            app:layout_constraintTop_toBottomOf="@id/companyNameEditTextLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/companyCatchPhraseEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/companyBsEditTextLayout"
            style="?attr/textInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bs"
            app:layout_constraintEnd_toEndOf="@id/companyNameEditTextLayout"
            app:layout_constraintStart_toStartOf="@id/companyNameEditTextLayout"
            app:layout_constraintTop_toBottomOf="@id/companyCatchPhraseEditTextLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/companyBsEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>